# controllers/users.js
@@ -1,23 +1,0 @@
-export const createUser = function get(req, res) {
-    res.send({createUser: "This is an createUser"});
-};
-
-export const loginUser = function get(req, res) {
-    res.send({createUser: "This is an createUser"});
-};
-
-export const logoutUser = function get(req, res) {
-    res.send({createUser: "This is an createUser"});
-};
-
-export const getUserByName = function get(req, res) {
-    res.send({createUser: "This is an createUser"});
-};
-
-export const updateUser = function get(req, res) {
-    res.send({createUser: "This is an createUser"});
-};
-
-export const deleteUser = function get(req, res) {
-    res.send({createUser: "This is an createUser"});
-};
